<resources>
    <string name="app_name">ValidasiLoginP2</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="nama_lengkap">Nama Lengkap</string>
    <string name="sekolah">Sekolah</string>
    <string name="alamat">Alamat</string>
    <string name="s_i_m_p_a_n">S I M P A N</string>
    <string name="logout">Logout</string>
    <string name="r_e_g_i_s_t_e_r">R E G I S T E R</string>
</resources>